--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         class="sparkar animate-enter16 smart-layers-pointers"
         src="https://anima-uploads.s3.amazonaws.com/projects/601466fdae43ff89feece7b3/releases/60146715723569092d9f81a6/img/sparkar@1x.png"
     /></a>
-    <a href="saket.lakhotia17@gmail.com?subject=Hello" target="_blank"
+    <a href="mailto:saket.lakhotia17@gmail.com?subject=Hello" target="_blank"
       ><img
         class="gmail animate-enter17 smart-layers-pointers"
         src="https://anima-uploads.s3.amazonaws.com/projects/601466fdae43ff89feece7b3/releases/60146715723569092d9f81a6/img/gmail@1x.png"
