--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
         Hello World!<br />My name is Saket.<br />I am studying in 3rd year of<br />5yr dual degree course (MBA &amp;
         Btech) <br />in Information Technology from <br />NMIMS University, Mumbai.<br />I’m actively searching for
         <br />Software Engineering and/or <br />UI/UX design internship for Summer 2021!
+        
+        <h2 class="rotate"> FULL STACK DEVELOPER , GAMER , MUSIC LOVER </h2>
+        
       </div>
     </div>
     <div class="uiux-designer helveticaneue-medium-black-40px animate-enter5">UI/UX Designer</div>
