--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         class="screenshot--100953-pm animate-enter14 smart-layers-pointers"
         src="https://anima-uploads.s3.amazonaws.com/projects/601466fdae43ff89feece7b3/releases/60146715723569092d9f81a6/img/screenshot-2021-01-29-at-10-09-53-pm@1x.png"
     /></a>
-    <a href="https://www.linkedin.com/in/saket-lakhotia-428a57168/" target="_blank">
+    <a href="https://www.linkedin.com/in/saketlakhotia17/" target="_blank">
       <div class="link animate-enter15 smart-layers-pointers">
         <img
           class="link-1"
