--- a/index.html
+++ b/index.html
@@ -50,8 +50,13 @@
       />
       <div class="text-3 helveticaneue-mediumitalic-medium-white-30px animate-enter7">
         Hello World!<br />My name is Saket.<br />I am studying in 3rd year of<br />5yr dual degree course (MBA &amp;
+        Btech) <br />in Information Technology from <br />NMIMS University, Mumbai.<br />I’m currently working as a
+        <br />Android Developer Intern <br />at Pheme Software (IBM Sister Company).
+        <!--
+        Hello World!<br />My name is Saket.<br />I am studying in 3rd year of<br />5yr dual degree course (MBA &amp;
         Btech) <br />in Information Technology from <br />NMIMS University, Mumbai.<br />I’m actively searching for
         <br />Software Engineering and/or <br />UI/UX design internship for Summer 2021!
+        -->
       </div>
     </div>
     <div class="uiux-designer helveticaneue-medium-black-40px animate-enter5">UI/UX Designer</div>
