--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       />
       <div class="text-3 helveticaneue-mediumitalic-medium-white-30px animate-enter7">
         Hello World!<br />My name is Saket.<br />I am studying in 3rd year of<br />5yr dual degree course (MBA &amp;
-        Btech) <br />in Information Technology from <br />NMIMS University, Mumbai.<br />I’m currently working as a
+        Btech) <br />in Information Technology from <br />NMIMS University, Mumbai.<br />I’m currently working as an
         <br />Android Developer Intern <br />at Pheme Software (IBM Sister Company).
         <!--
         Hello World!<br />My name is Saket.<br />I am studying in 3rd year of<br />5yr dual degree course (MBA &amp;
